# wafaa/storage/api-docs/api-docs.json
@@ -323,7 +323,12 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             },
             "post": {
                 "tags": [
@@ -835,6 +840,12 @@
                 "in": "header",
                 "bearerFormat": "JWT",
                 "scheme": "bearer"
+            },
+            "sanctum": {
+                "type": "apiKey",
+                "description": "Enter token in format (Bearer <token>)",
+                "name": "Authorization",
+                "in": "header"
             }
         }
     },
@@ -854,6 +865,11 @@
         {
             "name": "Utilisateurs",
             "description": "Utilisateurs"
+        }
+    ],
+    "security": [
+        {
+            "sanctum": []
         }
     ]
 }
